refactor: Position 객체 변환 메서드 추가